# SegmentationPhotometrique

./: .gitignore  CMakeLists.txt  SmallImage.cpp  SmallImage.h  Traitement.cpp  Traitement.h  main.cpp
